--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.organization=awanesia
 sonar.projectKey=awanesia4k03padamu
-
+sonar.login=220cb7b9d6406e1401291cc38f4c032416941c71
+sonar.password=
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/ 
 sonar.sources=.
